# VulkanViewer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: Dependencies.cmake
src/app/: CMakeLists.txt  VulkanViewer.cpp  VulkanViewer.h
src/app/data/shaders/: CMakeLists.txt  hello_world.slang  simple_model.slang
src/engine/: CMakeLists.txt  engine.cpp  engine.ixx  utils.cpp
src/engine/utils/: CMakeLists.txt  gltf_utils.cpp  stb_image_loader.cpp  utils.cpp
src/engine/vulkan/: context.cpp  framebuffer.cpp  memory_allocator.cpp  renderer.cpp  resource_factory.cpp  sdl_context.cpp
